--- a/package.json
+++ b/package.json
@@ -1,23 +1,10 @@
 {
-  "name": "spacebook",
-  "version": "1.0.0",
-  "description": "A simple site generator based on Eleventy, Tailwind 2.0, and Alpine.js",
   "scripts": {
-    "start": "eleventy --serve & postcss styles/tailwind.css --o _tmp/style.css --watch",
-    "build": "ELEVENTY_PRODUCTION=true eleventy && NODE_ENV=production postcss styles/tailwind.css --o _site/style.css &&  ./node_modules/.bin/cleancss -o _site/style.css _site/style.css",
+    "start": "eleventy --serve & tailwind -c styles/tailwind.config.js -i styles/tailwind.css -o _site/style.css --watch",
+    "build": "ELEVENTY_PRODUCTION=true eleventy && NODE_ENV=production tailwind -c styles/tailwind.config.js -i styles/tailwind.css -o _site/style.css -m",
     "watch": "npx eleventy --watch",
     "debug": "DEBUG=* npx eleventy"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/broeker/spacebook.git"
-  },
-  "author": "Tim Broeker <broeker@gmail.com> (https://www.electriccitizen.com/)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/broeker/spacebook/issues"
-  },
-  "homepage": "https://github.com/broeker/spacebook",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
     "alpinejs": "^2.7.3",
@@ -62,6 +49,5 @@
     "staticrypt": "^1.3.2",
     "uglify-es": "^3.3.9",
     "url-pattern": "^1.0.3"
-  },
-  "main": ".eleventy.js"
+  }
 }
