--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "scripts": {
-    "start": "eleventy --serve & tailwind -c styles/tailwind.config.js -i styles/tailwind.css -o _site/style.css --watch",
-    "build": "ELEVENTY_PRODUCTION=true eleventy && NODE_ENV=production tailwind -c styles/tailwind.config.js -i styles/tailwind.css -o _site/style.css -m",
-    "watch": "npx eleventy --watch",
-    "debug": "DEBUG=* npx eleventy"
+    "watch:tailwind": "tailwind -c styles/tailwind.config.js -i styles/tailwind.css -o _site/style.css --watch",
+    "serve": "eleventy --serve",
+    "dev": "npm-run-all --parallel clean serve watch:tailwind",
+    "prod": "npm-run-all --parallel clean build build:tailwind",
+    "build": "ELEVENTY_PRODUCTION=true eleventy",
+    "build:tailwind": "tailwind -c styles/tailwind.config.js -i styles/tailwind.css -o _site/style.css -m",
+    "watch": "eleventy --watch",
+    "debug": "DEBUG=* eleventy",
+    "clean": "rimraf _site"
   },
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
@@ -15,8 +20,10 @@
     "markdown-it": "^10.0.0",
     "markdown-it-anchor": "^5.3.0",
     "markdown-it-image-lazysizes": "^1.0.0",
+    "npm-run-all": "^4.1.5",
     "postcss-cli": "^8.3.0",
     "prettier": "^2.1.2",
+    "rimraf": "^3.0.2",
     "tailwindcss": "^2.0.2"
   },
   "dependencies": {
